# BeerBeat

./: CMakeLists.txt  README.md
src/: BeerBeat.cpp  CMakeLists.txt
src/patternEngine/: CMakeLists.txt  Pattern.cpp  Pattern.h  PatternEngine.cpp  PatternEngine.h
src/patternEngine/visualization/: IOutputDevice.h  visualization.cpp  visualization.h
src/patternEngine/visualization/gui/: DebugApplication.cpp  DebugApplication.h  DebugGui.cpp  DebugGui.h  LEDArea.cpp  LEDArea.h
